Download binaries here: http://market.android.com/details?pub=Andsen

Next version:
	Select where to create a new database using a directory picker
	You get tips about what is possible in the different parts of the program
	
	Corrections of the French translation (was by my mistake included in 
		version 3.1)
	Bug fixes (show table info with no valid database open)
	
Version (3.1):
	Go directly to favorite view in table viewer (Fields, SQL or Data)
	Configurable font size in data lists
	Easy editing of databases in "Dropbox"
	Bug fixes: Has solved an annoying null pointer bug - it did appear if
		users was trying to manipulate something that was not a database  

Version (3.0):
	A tool to create new databases with PK, ASC / DESC, AUTOINCREMENT,
	  not null, unique, default values, foreign keys and check for field type.
	Easy deletion of tables, views and indexes from lists in database viewer by
	  "long clicking" the table / view / index
	Foreign key constraint checking can be turned on (Android default is off)
	Better database handling hopefully giving fewer errors / force closes
	Now works in landscape mode
	Better testing of databases on opening
	Bug fixes

Version 2.7:
	The following Android 3 has been problems solved:
		Problems with creating tables and executing other than select statements
		Now name of databases can be in mixed case
  Editing foreign key fields using selection list based on foreign key values
    (experimental and must be turned on in configuration)
  Now keeping main screen in portrait mode must be configured
		Logging can be turned on to collect informations about bugs (use
	    aLogViewer and filter for aSQLMan)
  Bug fixes

Version 2.6:
  Main screen now always in portrait
  First / last page in table viewer
  Simple filter option tin table viewer
  Quite a few bug fixes

Version 2.5:
  Bug fixes
  Hope the BLOB problem that some users gets is solved
  Now records can be deleted by pressing edit in the table viewer