@@ -9,6 +9,13 @@
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content" 
     />
+  <Button
+    android:id="@+id/SelectFolder" 
+    android:layout_width="fill_parent" 
+    android:layout_height="wrap_content"
+    android:text="@string/PlaceNewDBHere"
+    android:visibility="gone" 
+    />
   <ListView
     android:id="@android:id/list"
     android:layout_width="fill_parent" 
