@@ -4,9 +4,14 @@ Next version:
 	Select where to create a new database using a directory picker
 	You get tips about what is possible in the different parts of the program
 	
+	Foreign key selection lists now show a string representation of the records
+		not just the FK fields. The field that the foreign key refers to MUST be 
+		the primary key in the referenced table (is this right???)
+	
 	Corrections of the French translation (was by my mistake included in 
 		version 3.1)
-	Bug fixes (show table info with no valid database open)
+	Bug fixes (show table info with no valid database open, test for valid or empty FK
+		definition)
 	
 Version (3.1):
 	Go directly to favorite view in table viewer (Fields, SQL or Data)
